--- a/.github/workflows/az-login.yml
+++ b/.github/workflows/az-login.yml
@@ -3,7 +3,7 @@ name: Az Login
 on: workflow_dispatch
 
 jobs:
-  Login:
+  login:
     runs-on: ubuntu-latest
     steps:
       - name: Azure Login
@@ -11,4 +11,4 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
           
-       - run: az account show
+      - run: az account show
