--- a/.github/workflows/az-login.yml
+++ b/.github/workflows/az-login.yml
@@ -9,6 +9,6 @@ jobs:
       - name: Azure Login
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ vars.AZURE_CREDENTIALS }}
           
       - run: az account show
