--- a/.github/workflows/az-login.yml
+++ b/.github/workflows/az-login.yml
@@ -9,6 +9,6 @@ jobs:
       - name: Azure Login
         uses: azure/login@v1
         with:
-          creds: ${{ vars.AZURE_CREDENTIALS }}
+          creds: '{"clientId":"${{ secrets.CLIENT_ID }}","clientSecret":"${{ secrets.CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.TENANT_ID }}"}'
           
       - run: az account show
