--- a/.github/workflows/spinup-destroy.yml
+++ b/.github/workflows/spinup-destroy.yml
@@ -8,7 +8,7 @@ env:
   PACKAGES_TOKEN: ${{secrets.CR_PAT}}
   AZURE_RESOURCE_GROUP: rg-solar-jpfs-dev
   AZURE_APP_PLAN: actions-ttt-deployment
-  AZURE_LOCATION: '"Central US"'
+  AZURE_LOCATION: 'eastus'
   #################################################
   ### USER PROVIDED VALUES ARE REQUIRED BELOW   ###
   #################################################
