--- a/.github/workflows/spinup-destroy.yml
+++ b/.github/workflows/spinup-destroy.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   PACKAGES_TOKEN: ${{secrets.CR_PAT}}
-  AZURE_RESOURCE_GROUP: ${{ var.AZURE_RESOURCE_GROUP }}
+  AZURE_RESOURCE_GROUP: ${{ vars.AZURE_RESOURCE_GROUP }}
   AZURE_APP_PLAN: actions-ttt-deployment
   AZURE_LOCATION: 'eastus'
   #################################################
